@@ -1,4 +1,4 @@
-CHANGES.txt - 10/29/2001
+CHANGES.txt - 10/31/2001
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.16
@@ -8,6 +8,8 @@ CHANGES IN HTMLDOC v1.8.16
 
     CHANGES
 
+	- Now break before and after DIV groups to match most
+	  browsers (the HTML spec is ambivalent about it...)
 
     BUG FIXES
 
@@ -17,6 +19,9 @@ CHANGES IN HTMLDOC v1.8.16
 	- The "HALF PAGE" comment would lock up HTMLDOC -
 	  HTMLDOC would keep adding pages until it ran out of
 	  memory.
+	- SUP and SUB 
+	- Empty cells could cause unnecessary vertical alignment
+	  on the same row.
 
 
 CHANGES IN HTMLDOC v1.8.15
